Player scene completed

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -22,6 +22,7 @@ scripts=["res://Player.gd"]
 [dialog_bounds]
 
 create_new_node=Rect2(540, 200, 1800, 1400)
+project_settings=Rect2(540, 198, 1800, 1400)
 
 [script_setup]
 
